# cmux

./: .gitignore  AGENTS.md  DESIGN.md  MIGRATE.md  README.md  SECURITY.md  install.sh  pyproject.toml
cmux_lib/: IDENTITY_GUIDE.md  ONBOARDING.md  WAKEUP.md  cli.py  clone_readme.md  daemon.py  db.py  wizard.md
examples/: debate.sh  team_demo.sh
tests/: fake_claude.py  test_cmux.py
