[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmux"
version = "0.1.0"
description = "Claude multiplexer — persistent named Claude sessions with a programmable message queue"
requires-python = ">=3.9"
dependencies = ["claudio"]

[project.scripts]
cmux = "cmux_lib.cli:main"
